# interview_tasks

./: CMakeLists.txt  main.cpp
udp_client_server/: CMakeLists.txt  README.md  README.txt  build.sh  client.py  main.cpp  memory_pool.hpp  memory_pull.hpp  run.sh  udp_server.hpp
